welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		case _ => if (!estFaceMur & getCouleurSol=Color.lightGray) recule;	
                                          ^